--- a/.github/workflows/open-geodata.yml
+++ b/.github/workflows/open-geodata.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source-directory: 'data'
+          source-directory: 'data/zips'
           user-name: michelmetran
           user-email: michelmetran@gmail.com
 
